# naia-macroquad-example

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  deploy.sh
client/src/: app.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: point_actor.rs  shared_config.rs
