[package]
name = "naia-mq-client-example"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "naia-client-macroquad-example"
path = "src/main.rs"

[features]
multithread = [ "naia-client/multithread" ]

[dependencies]
cfg-if = "0.1.10"
naia-client = { version = "0.4.3", features = [ "mquad" ] }
naia-mq-example-shared = { path = "../shared" }
macroquad = { version = "=0.3.0-alpha.12", features = [ "log-impl" ] }