[package]
name = "naia-mq-server-example"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
publish = false
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
use-udp = [ "naia-server/use-udp" ]
use-webrtc = [ "naia-server/use-webrtc" ]
multithread = [ "naia-server/multithread", "naia-mq-example-shared/multithread" ]

[dependencies]
naia-server = { path = "../../naia/server" }  #naia-server = { version = "0.5.0" }
naia-mq-example-shared = { path = "../shared" }
log = "0.4"
simple_logger = { version = "1.4" }
smol = { version = "1.2.4" }